fix: use Android compatible cgroup state reader